--- a/css/template.css
+++ b/css/template.css
@@ -2,9 +2,7 @@
 * {
   margin: 0;
   font-style: normal;
-  text-decoration: none;
   font-weight: 100;
-  font-size: 14px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -458,12 +456,47 @@ article img.attachment-post-thumbnail {
 footer {
   height: auto;
   background-color: #151515;
-  color: white;
-  padding: 1.5% 10% 1.5% 10%;
+}
+
+footer .footer-logo {
+  width: 260px;
+}
+
+footer .footer-logo img {
+  width: 100px;
+  height: auto;
+  object-fit: contain;
+  padding-bottom: 8px;
+}
+
+footer h3 {
+  font-weight: bold;
 }
 footer .container {
   display: flex;
   justify-content: space-between;
+  padding: 1.5% 10% 1.5% 10%;
+}
+
+footer .footer-menu .menu a {
+  color: #f9990d;
+  text-decoration: none;
+}
+footer .copyright {
+  display: flex;
+  background-color: #302e29;
+  color: #7b7b7b;
+  padding: 1% 10% 1% 10%;
+  justify-content: center;
+}
+
+@media (max-width: 783px) {
+  footer .container {
+    flex-direction: column;
+  }
+  footer .container > * {
+    margin: 22px 0;
+  }
 }
 /*=====================Fim Footer====================*/
 
